# ranting.rs

./: .gitignore  Cargo.toml  README.md
ranting_derive/: Cargo.toml  README.md
ranting_derive/language/: english.rs
ranting_derive/src/: lib.rs  ranting_impl.rs  str_lit.rs
ranting_derive/src/english/: mod.rs
ranting_derive/src/language/: english.rs  english_shared.rs  mod.rs  roman_shared.rs
src/: english.rs  lib.rs
src/english/: mod.rs
src/language/: english.rs  english_shared.rs  mod.rs
tests/ranting/: main.rs  male_female_and_object.rs  readme_example.rs
