[package]
name = "ranting"
version = "0.1.2"
authors = ["Roel Kluin <Roel.Kluin@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"
description = "Linguistic formatting placeholder extensions for rust"
homepage = "https://github.com/RoelKluin/ranting.rs"
repository = "https://github.com/RoelKluin/ranting.rs"
readme = "README.md"
keywords = ["placeholder", "inflection", "verbs", "nouns", "indefinite-article"]
categories = ["text-processing", "template-engine"]
documentation = "https://docs.rs/ranting/0.1.2/ranting/"

[dependencies]
ranting_derive = { version = "=0.1.2", path = "ranting_derive" }
in_definite = "0.2"
Inflector = { version = "0.11.4", optional = true }
strum_macros = "0.24"
document-features = "0.2"

### FEATURES #################################################################

[features]
default = []

## allows inflection of the `Ranting` name as specified by placeholder markers `+`, `-` or `#var`.
inflector = ["Inflector"]
