[package]
name = "ranting"
version = "0.2.0"
authors = ["Roel Kluin <Roel.Kluin@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"
description = "Linguistic formatting placeholder extensions for rust"
homepage = "https://github.com/RoelKluin/ranting.rs"
repository = "https://github.com/RoelKluin/ranting.rs"
readme = "README.md"
keywords = ["placeholder", "inflection", "verbs", "nouns", "indefinite-article"]
categories = ["text-processing", "template-engine"]
documentation = "https://docs.rs/ranting/0.2.0/ranting/"

[dependencies]
ranting_derive = { version = "=0.2.0", path = "ranting_derive", default-features = false }
in_definite = "0.2"
strum_macros = "0.24"
strum = "0.24"
document-features = "0.2"
english-numbers = "0.3"

### FEATURES #################################################################

[features]
default = ["ranting_derive/default"]

## Print during compilation each `say!()` pattern with its `format!()` conversion.
debug = ["ranting_derive/debug"]
