[package]
name = "ranting_derive"
version = "0.1.0"
authors = ["Roel Kluin <Roel.Kluin@gmail.com>"]
description = "A proc-macro library for internal support of ranting"
license = "GPLv3"
edition = "2021"
repository = "https://github.com/RoelKluin/ranting.rs"
readme = "../README.md"
documentation = "https://docs.rs/ranting_derive/0.1.0/ranting_derive/"

[dependencies]
syn = { version = "1.0.98", features = ["full"] }
quote = "1.0.20"
proc-macro2 = "1.0.40"
lazy_static = "1.4.0"
darling = "0.14.1"
litrs = "0.2.3"
regex = "1.6.0"
itertools = "0.10.3"
proc-macro-error = "1.0.4"

[lib]
proc-macro = true
