[package]
name = "ranting_derive"
version = "0.2.1"
authors = ["Roel Kluin <Roel.Kluin@gmail.com>"]
description = "A proc-macro library for internal support of ranting"
license-file = "../LICENSE.txt"
edition = "2021"
repository = "https://github.com/RoelKluin/ranting.rs"
readme = "README.md"
documentation = "https://docs.rs/ranting_derive/0.2.1/ranting_derive/"

[dependencies]
darling = "0.14.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
litrs = "0.2.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.49"
quote = "1.0.20"
regex = "1.6.0"
strum = "0.24"
strum_macros = "0.24"
syn = { version = "1.0.98", features = ["full"] }
unicode-width = "0.1.5"

[lib]
proc-macro = true

### FEATURES #################################################################

[features]
default = []

## allows debugging.
debug = []
